--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-# ATLAS_URI=mongodb://localhost:27017/todo
-ATLAS_URI=mongodb+srv://quinntracy:AbQ9loA66FXjJiDJ@cluster0.p3d3jb7.mongodb.net/?retryWrites=true&w=majority
+ATLAS_URI=mongodb://localhost:27017/todo
+# ATLAS_URI=mongodb+srv://quinntracy:AbQ9loA66FXjJiDJ@cluster0.p3d3jb7.mongodb.net/?retryWrites=true&w=majority
 
 APP_NAME=Initial App
 EMAIL_USER=cndlebee@gmail.com
