--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "todolist": "file:..",
     "apexcharts": "^3.35.3",
     "axios": "^0.27.2",
     "devtools-detect": "^4.0.0",
