--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,6 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "todolist": "file:..",
     "apexcharts": "^3.35.3",
     "axios": "^0.27.2",
     "devtools-detect": "^4.0.0",
@@ -19,13 +18,14 @@
     "react-form-stepper": "^2.0.3",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-toastify": "^9.0.3",
     "react-webcam": "^7.0.1",
     "select-philippines-address": "^1.0.6",
     "simple-peer": "^9.11.1",
     "socket.io-client": "^4.5.1",
     "sweetalert2": "^11.4.17",
+    "todolist": "file:..",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
